--- a/ClientApp/public/manifest.json
+++ b/ClientApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "TECHMarket",
-  "name": "TECHMarket",
+  "short_name": "TechMarket",
+  "name": "TechMarket",
   "icons": [
     {
       "src": "favicon.ico",
