--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,30 +1,40 @@
 {
-  "name": "techmarket",
+  "name": "TechMarket",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "axios": "^0.19.2",
+    "babel-eslint": "10.0.1",
     "bootstrap": "^4.1.3",
+    "browserslist": "^4.11.1",
+    "caniuse-lite": "^1.0.30001043",
+    "compass": "^0.1.1",
     "jquery": "^3.4.1",
+    "jwt-decode": "^2.2.0",
     "merge": "^1.2.1",
+    "node-sass": "^4.13.1",
     "oidc-client": "^1.9.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.0",
-    "reactstrap": "^8.4.1",
+    "react-notification-alert": "0.0.12",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "^3.0.1",
+    "reactstrap": "^6.3.0",
     "rimraf": "^2.6.2"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
     "cross-env": "^5.2.0",
-    "typescript": "^3.7.5",
-    "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.2.0",
-    "eslint-plugin-flowtype": "^4.6.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3"
+    "eslint": "^5.12.0",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-plugin-flowtype": "^2.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.11.1",
+    "typescript": "^3.5.2"
   },
   "eslintConfig": {
     "extends": "react-app"
