--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,17 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MYConnection": "Data Source=TECHMARKET.db"
+  },
+  "ApplicationSettings": {
+    "JWT_secret":  "1234567890123456789"
+  }  
+
 }
