--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=127.0.0.1;uid=root;pwd=root;database=TECHMARKET"
-  }
-} 
+    "MYConnection": "Data Source=TECHMARKET.db"
+  },
+  "ApplicationSettings": {
+    "JWT_secret":  "1234567890123456789"
+  }  
+
+}
